force-app/main/default/objects/Transportadora__c/Transportadora__c.object-meta.xml
<CustomObject>
    <label>Transportadora</label>
    <nameField>
        <label>Transportadora</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transportadoras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>