force-app/main/default/objects/Transportadora__c/fields/CidadeId__c.field-meta.xml
<CustomField>
    <fullName>CidadeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cidade</label>
    <referenceTo>Cidade__c</referenceTo>
    <relationshipLabel>Transportadoras</relationshipLabel>
    <relationshipName>Transportadoras</relationshipName>
    <type>Lookup</type>
</CustomField>