force-app/main/default/objects/Transportadora__c/fields/CodigoTransportadora__c.field-meta.xml
<CustomField>
    <fullName>CodigoTransportadora__c</fullName>
    <externalId>true</externalId>
    <label>Código da Transportadora</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>