force-app/main/default/objects/Transportadora__c/fields/Rua__c.field-meta.xml
<CustomField>
    <fullName>Rua__c</fullName>
    <label>Rua</label>
    <length>120</length>
    <type>Text</type>
</CustomField>