force-app/main/default/objects/Transportadora__c/fields/TipoFrete__c.field-meta.xml
<CustomField>
    <fullName>TipoFrete__c</fullName>
    <label>Tipo do Frete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <label>CIF</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>FOB</label>
            </value>
            <value>
                <fullName>CF</fullName>
                <label>CIF/FOB</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>